--- a/index.html
+++ b/index.html
@@ -207,7 +207,7 @@
             </div><!-- .line-footer -->
                 
             <div class="line-footer">
-                <p><i class="bi bi-envelope-fill"></i> <a href="mailto:pedrobusnis@gmail.com">pedrobusnis@gmail.com </a></p>
+                <p><i class="bi bi-envelope-fill"></i> <a href="mailto:pedropiedadebusiness@gmail.com">pedropiedadebusiness@gmail.com </a></p>
 
             </div><!-- .line-footer -->
 
