formato de imagens

--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
                 <h2 class="titulo">SOBRE MIM<span>.</span></h2>
                 <div class="flex">
                     <div class="img-sobre">
-                        <img src="imagens/B449185E-5527-4DA2-A0CF-5833ECDEC1CE.heic" alt="Imagem sobre mim" class="imagem-ajustada">
+                        <img src="imagens/B449185E-5527-4DA2-A0CF-5833ECDEC1CE.jpeg" alt="Imagem sobre mim" class="imagem-ajustada">
                     </div><!-- .img-sobre -->
                     <div class="txt-sobre">
                         <h2>Ola, Sou o <span>Pedro Piedade.</span></h2>
