--- a/index.html
+++ b/index.html
@@ -178,11 +178,11 @@
         <section id="contato" class="formulario">
             <div class="interface">
                 <h2 class="titulo">ENTRE EM CONTATO<span>.</span></h2>
-                <form action="">
-                    <input type="text" placeholder="Seu nome" required>
-                    <input type="email" placeholder="Seu email" required>
-                    <input type="text" placeholder="Numero" required>
-                    <textarea name="" id="" cols="30" rows="10" placeholder="Sua mensagem"></textarea>
+                <form action="https://formsubmit.co/pedropiedadebusiness@gmail.com" method="POST">
+                    <input type="text" name="name" placeholder="Seu nome" required>
+                    <input type="email" name="email" placeholder="Seu email" required>
+                    <input type="text" name="numero" placeholder="Numero" >
+                    <textarea name="mensagem" id="" cols="30" rows="10" placeholder="Sua mensagem"></textarea>
                     <div class="btn-enviar"><input type="submit" value="ENVIAR"></div>
                     
                 </form>
