Mudança no texto

--- a/index.html
+++ b/index.html
@@ -75,8 +75,8 @@
             <div class="interface">
                 <div class="flex">
                     <div class="txt-topo-site">
-                        <h1>I'm <span>Developer.</span></h1>
-                        <p>O que difere um loco de um genio é que apenas um deles imagina o resultado</p>
+                        <h1>Just one <span>Dev.</span></h1>
+                        <p>O que difere um loco de um genio é que apenas um deles imagina o resultado.</p>
 
                     </div><!-- .txt-topo-site -->
                     <div class="img-topo-site">
