correcao de texto

--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@
                       <div class="overlay">Simulação Siga</div>
                     </div>
                     <div class="descricao-direita">
-                      Simulador de sinais de trânsito para estudo de lógica, em SQL.
+                       Simulação em C da gestão académica de alunos, SIGA.
                     </div>
                   </div>
           
