--- a/index.html
+++ b/index.html
@@ -216,6 +216,17 @@
                       Website institucional modelo, com HTML5 e CSS3.
                     </div>
                   </div>
+
+                  <!-- Projeto 6 - Imagem à direita -->
+                  <div class="bloco-projeto row-reverse">
+                    <div class="img-port" style="background-image: url(imagens/pexels-kelly-1179532-2928232.jpg);">
+                      <div class="overlay">SGD</div>
+                    </div>
+                    <div class="descricao-esquerda">
+                      Sistema de Gestão Documental [SGD] que permita transitar de um expediente
+                      tradicional para um de base digital.
+                    </div>
+                  </div>
           
                 </div> <!-- projetos-scroll -->
               </div> <!-- flex -->
