Update section projetos

--- a/index.html
+++ b/index.html
@@ -159,7 +159,8 @@
           
               <div class="flex">
                 <!-- Texto fixo do lado esquerdo -->
-                <div class="texto-fixo">
+                
+                <div id="texto-f" class="texto-fixo">
                   <h3>Veja alguns dos meus projetos incríveis <span>!</span></h3>
                   <p>Explore cada um deslizando para baixo.</p>
                 </div>
