--- a/index.html
+++ b/index.html
@@ -99,6 +99,13 @@
                     <i class="bi bi-file-earmark-code"></i>
                     <h3>Website</h3>
                     <p>Desenvolvimento de sites responsivos e otimizados.</p>
+
+                    <div class="sub-especialidades1">
+                      <i class="bi bi-filetype-html"></i>
+                      <i class="bi bi-filetype-css"></i>
+                      <i class="bi bi-filetype-js"></i>
+                    </div>
+                    
                 </div><!-- .especialidades-box -->
 
                 <div class="especialidades-box">
