--- a/index.html
+++ b/index.html
@@ -158,13 +158,11 @@
                     </div><!-- .img-sobre -->
                     <div class="txt-sobre">
                         <h2>Ola, Sou o <span>Pedro Piedade.</span></h2>
-                        <p>Sou uma pessoa comunicativa, organizada e apaixonada 
-                            por tecnologia. Tenho facilidade para resolver problemas, 
-                            gosto de trabalhar em equipe e mantenho a calma sob 
-                            pressão. Nos meus momentos livres, dedico-me à fotografia, 
-                            corrida e projetos ligados ao universo automotivo. 
-                            Também tenho um carinho especial por cães e valorizo o 
-                            equilíbrio entre trabalho e lazer.</p>
+                        <p>Estudante de Engenharia Informática com experiência em C, 
+                          SQL e Assembly. Já desenvolvi jogos, sistemas de gestão e simulações. 
+                          Interesso-me por software, sistemas inteligentes e cibersegurança. 
+                          Destaco-me pela abordagem prática, trabalho em equipa e foco na 
+                          resolução de problemas.</p>
 
                             <div class="btn-social">
                                 <a href="PedroCV.pdf" download class="botao-download">Meu CV</a>
