updade about me

--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
                     <div class="txt-sobre">
                         <h2>Ola, Sou o <span>Pedro Piedade.</span></h2>
                         <p>Estudante de Engenharia Informática com experiência em C, 
-                          SQL e Assembly. Já desenvolvi jogos, sistemas de gestão e simulações. 
+                          SQL, HTML e CSS. Já desenvolvi jogos, sistemas de gestão e simulações. 
                           Interesso-me por software, sistemas inteligentes e cibersegurança. 
                           Destaco-me pela abordagem prática, trabalho em equipa e foco na 
                           resolução de problemas.</p>
