--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                     <li><a href="#especialidades">Especialidades</a></li>
                     <li><a href="#sobre">Sobre</a></li>
                     <li><a href="#projetos">Projetos</a></li>
-                    <li><a href="DIWeb.html">D.Interfaces Web</a></li>
+                    <li><a href="DIWeb.html"><span class="btn-DIW">D.Interfaces Web</span></a></li>
                 </ul>
             </nav>
             
