--- a/LAB2-DIW/local.html
+++ b/LAB2-DIW/local.html
@@ -3,6 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <title>Cidade</title>
+        <link rel="stylesheet" href="styles.css">
     </head>
     <body>
         <header>
@@ -16,10 +17,9 @@
             </nav>
         </header>
         <main>
-            <h2>Local</h2>
+            <h2>Localização</h2>
 
-            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d190028.3544253909!2d12.37118794952652!3d41.91020879226165!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x132f6196f9928ebb%3A0xb90f770693656e38!2zUm9tYSwgSXTDoWxpYQ!5e0!3m2!1spt-PT!2spt!4v1757531925123!5m2!1spt-PT!2spt" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
-            <p>
+            
                 Roma está localizada no centro-oeste da Itália, na região do Lácio (Lazio), 
                 estendendo-se ao longo das margens do rio Tibre. A sua posição foi sempre 
                 estratégica: fica a cerca de 25 km do Mar Tirreno, o que lhe garantia 
@@ -41,6 +41,9 @@
                 a ligam ao resto de Itália e da Europa, além de possuir o Aeroporto de 
                 Fiumicino, um dos maiores hubs do continente.
             </p>
+
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d190028.3544253909!2d12.37118794952652!3d41.91020879226165!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x132f6196f9928ebb%3A0xb90f770693656e38!2zUm9tYSwgSXTDoWxpYQ!5e0!3m2!1spt-PT!2spt!4v1757531925123!5m2!1spt-PT!2spt" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+            <p>
         </main>
         <footer>
             <p>DIW 2025</p>
