--- a/LAB2-DIW/multimedia.html
+++ b/LAB2-DIW/multimedia.html
@@ -3,6 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <title>Cidade</title>
+        <link rel="stylesheet" href="styles.css">
     </head>
     <body>
         <header>
@@ -18,7 +19,8 @@
         <main>
             <h2>Multimedia</h2>
             <section>
-              <img src="imagens/63743_shutterstock-147643964-coliseu-2.jpg" alt="Coliseu">
+              <img class="img" src="imagens/63743_shutterstock-147643964-coliseu-2.jpg" alt="Coliseu">
+              <img class="img" src="imagens/coliseu_bilhetes-3-2.jpg" alt="Coliseu-2">
 
                  <h3>Coliseu</h3>
                  <p>
@@ -32,7 +34,8 @@
             </section>
 
                         <section>
-              <img src="imagens/63743_shutterstock-632248541-arco-de-constantino.jpg" alt="Coliseu">
+              <img class="img" src="imagens/63743_shutterstock-632248541-arco-de-constantino.jpg" alt="Coliseu">
+              <img class="img" src="imagens/images.jpeg" alt="Coliseu-2">
 
                  <h3>Arco de Constantino</h3>
                  <p>
