--- a/DIWeb.html
+++ b/DIWeb.html
@@ -59,7 +59,10 @@
     <div class="hub-container">
         <div class="hub-title">Meu Hub de Lab's</div>
         <div class="hub-links">
-            <a href="LAB2-DIW/index.html" target="_blank">LAB 1</a>
+            <a href="LAB1-DIW/index.html" target="_blank">LAB 1</a>
+        </div>
+        <div class="hub-links">
+            <a href="LAB2-DIW/index.html" target="_blank">LAB 2</a>
         </div>
         <button class="back-btn" onclick="window.history.back()">⟵ Voltar</button>
     </div>
