--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             <nav class="menu-desktop">
                 <ul>
                     <li><a href="#inicio">Início</a></li> 
-                    <li><a href="#especialidades">Especialidades</a></li>
+                    <li><a href="#especialidades2">Especialidades</a></li>
                     <li><a href="#sobre">Sobre</a></li>
                     <li><a href="#projetos">Projetos</a></li>
                     <li><a href="DIWeb.html"><span class="btn-DIW">D.Interfaces Web</span></a></li>
@@ -61,6 +61,7 @@
                         <li><a href="#sobre">Sobre</a></li>
                         <li><a href="#projetos">Projetos</a></li>
                         <li><a href="#contato">Contato</a></li>
+                        <li><a href="DIWeb.html"><span class="btn-DIW">D.Interfaces Web</span></a></li>
                     </ul>
                 </nav>
                 <!-- .menu-mobile --> 
