--- a/MYHERO/index.html
+++ b/MYHERO/index.html
@@ -31,44 +31,46 @@
 
 
     <section class="pag">
-        <section class="img-home">
 
-            <div class="home-container">
-                <div class="home">
-                    <div class="home-texto">
-                        <h1>Just one <span>*{DEV}</span> </h1>
-                        <p>O maior erro de um engenheiro é</p> 
-                        <p>querer otimizar coisas que não deviam existir.</p>
-                    </div>
 
-                    <img src="imagens/IMG_8118 2.jpeg" alt="Foto de perfil">
-
+        <div class="home-container">
+            <div class="home">
+                <div class="home-texto">
+                    <h1><span>!!Em manutenção!!</span>{Erro 404 (Not Found)}</span> </h1>
+                    
                 </div>
+
+                <img src="imagens/IMG_8118 2.jpeg" alt="Foto de perfil">
 
             </div>
 
-        </section>
+        </div>
+
+
 
 
 
 
     </section>
 
-    <section class="pag">
+    <section id="projectos" class="pag">
+        <section class="img-hub">
+            <div class="hub-container">
+                <div class="hub-title">Meu Hub de Lab's</div>
+                <div class="hub-links">
+                    <a href="LAB1-DIW/index.html" target="_blank">LAB 1</a>
+                </div>
+                <div class="hub-links">
+                    <a href="LAB2-DIW/index.html" target="_blank">LAB 2</a>
+                </div>
+                <div class="hub-links">
+                    <a href="LAB3-DIW/index.html" target="_blank">LAB 3</a>
+                </div>
+                <button class="back-btn" onclick="window.history.back()">⟵ Voltar</button>
+            </div>
+        </section>
 
-        <div id="projectos" class="hub-container">
-            <div class="hub-title">Meu Hub de Lab's</div>
-            <div class="hub-links">
-                <a href="LAB1-DIW/index.html" target="_blank">LAB 1</a>
-            </div>
-            <div class="hub-links">
-                <a href="LAB2-DIW/index.html" target="_blank">LAB 2</a>
-            </div>
-            <div class="hub-links">
-                <a href="LAB3-DIW/index.html" target="_blank">LAB 3</a>
-            </div>
-            <button class="back-btn" onclick="window.history.back()">⟵ Voltar</button>
-        </div>
+
     </section>
 
     <section id=disciplina class="pag">
