--- a/MYHERO/index.html
+++ b/MYHERO/index.html
@@ -36,11 +36,12 @@
         <div class="home-container">
             <div class="home">
                 <div class="home-texto">
-                    <h1><span>!!Em manutenção!!</span>{Erro 404 (Not Found)}</span> </h1>
+                    <h1><span>!!Em manutenção!!</span> Erro 404 (Not Found) </h1>
+                    <p>OS LAB's estão na proxima secção</p>
                     
                 </div>
 
-                <img src="imagens/IMG_8118 2.jpeg" alt="Foto de perfil">
+                <img src="" alt="Foto de perfil">
 
             </div>
 
