--- a/MYHERO/index.html
+++ b/MYHERO/index.html
@@ -36,7 +36,7 @@
         <div class="home-container">
             <div class="home">
                 <div class="home-texto">
-                    <h1><span>!!Em manutenção!!</span> Erro 404 (Not Found) </h1>
+                    <h1><span> !!Em manutenção!! </span> Erro 404 (Not Found) </h1>
                     <p>OS LAB's estão na proxima secção</p>
                     
                 </div>
@@ -66,6 +66,9 @@
                 </div>
                 <div class="hub-links">
                     <a href="LAB3-DIW/index.html" target="_blank">LAB 3</a>
+                </div>
+                <div class="hub-links">
+                    <a href="LAB4-DIW/index.html" target="_blank">LAB 4</a>
                 </div>
                 <button class="back-btn" onclick="window.history.back()">⟵ Voltar</button>
             </div>
