--- a/MYHERO/LAB4-DIW/index.html
+++ b/MYHERO/LAB4-DIW/index.html
@@ -8,6 +8,9 @@
 </head>
 
 <body>
+    <section class="container">
+
+    
 
     <ul>
         <li class="passar" onmouseover="mudarTexto(this)" onmouseout="voltarTexto(this)">
@@ -47,7 +50,7 @@
     </ul>
 
     <div class= "cores-quadro" onmousemove="this.style.backgroundColor = corAleatoria()">Move o rato aqui! </div>
-
+</section>
 
     <!-- HTML já carregado! -->
     <script src="scripts/main.js"></script>
