--- a/MYHERO/index.html
+++ b/MYHERO/index.html
@@ -32,25 +32,25 @@
 
     <section class="pag">
 
+        <section class="img-home">
+            <div class="home-container">
+                <div class="home">
+                    <div class="home-texto">
+                        <h1><span> !!Em manutenção!! </span> Erro 404 (Not Found) </h1>
+                        <p>OS LAB's estão na proxima secção</p>
 
-        <div class="home-container">
-            <div class="home">
-                <div class="home-texto">
-                    <h1><span> !!Em manutenção!! </span> Erro 404 (Not Found) </h1>
-                    <p>OS LAB's estão na proxima secção</p>
-                    
+                    </div>
+
+                    <img src="" alt="Foto de perfil">
+
                 </div>
-
-                <img src="" alt="Foto de perfil">
 
             </div>
 
-        </div>
 
 
 
-
-
+        </section>
 
     </section>
 
@@ -69,6 +69,9 @@
                 </div>
                 <div class="hub-links">
                     <a href="LAB4-DIW/index.html" target="_blank">LAB 4</a>
+                </div>
+                <div class="hub-links">
+                    <a href="LAB5-DIW/index.html" target="_blank">LAB 5</a>
                 </div>
                 <button class="back-btn" onclick="window.history.back()">⟵ Voltar</button>
             </div>
