--- a/MYHERO/index.html
+++ b/MYHERO/index.html
@@ -73,6 +73,10 @@
                 <div class="hub-links">
                     <a href="LAB5-DIW/index.html" target="_blank">LAB 5</a>
                 </div>
+                 <div class="hub-links">
+                    <a href="LAB6-DIW/index.html" target="_blank">LAB 6</a>
+                </div>
+
                 <button class="back-btn" onclick="window.history.back()">⟵ Voltar</button>
             </div>
         </section>
