--- a/MYHERO/LAB7-DIW/index.html
+++ b/MYHERO/LAB7-DIW/index.html
@@ -26,24 +26,14 @@
     </header>
 
     <main>
-        <section class="inicio">
+        <!-- <section class="inicio">
 
-        </section>
-
-
+        </section> -->
 
 
-        <aside id="cesto">
-            <h3 class="cesto-texto">Cesto</h3>
-            <section id="cesto-container">
-                <div id="itens-carrinho"></div>
-                <p id="total">Total: €0.00</p>
-                <p id="contador-carrinho">Carrinho: 0 itens</p>
-                <button id="esvaziar">🗑️ Esvaziar</button>
 
 
-            </section>
-        </aside>
+       
 
         <section id="produtos">
             <h2>Produtos</h2>
@@ -65,6 +55,18 @@
 
             </section>
         </section>
+
+         <aside id="cesto">
+            <h3 class="cesto-texto">Cesto</h3>
+            <section id="cesto-container">
+                <div id="itens-carrinho"></div>
+                <p id="total">Total: €0.00</p>
+                <p id="contador-carrinho">Carrinho: 0 itens</p>
+                <button id="esvaziar">🗑️ Esvaziar</button>
+
+
+            </section>
+        </aside>
 
 
 
